Fixes checkbox alignment

--- a/src/webviews/apps/welcome/welcome.scss
+++ b/src/webviews/apps/welcome/welcome.scss
@@ -75,6 +75,18 @@ footer {
 	align-items: center;
 }
 
+.checkbox-group {
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+
+	span {
+		display: inline-block;
+		margin-left: 0.6rem;
+		margin-right: 0.4rem;
+	}
+}
+
 input[type='checkbox'] {
 	position: relative;
 	appearance: none;
